Implement builder pattern for DTO classes