@@ -1,36 +1,15 @@
 package com.munusync.backend.service;
 
-<<<<<<< HEAD
-import com.munusync.backend.entity.User;
-import com.munusync.backend.repository.UserRepository;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-
-import java.util.List;
-import java.util.Optional;
-
-@Service
-public class UserService {
-
-    @Autowired
-    private UserRepository userRepository;
-
-    public List<User> getAllUsers() {
-        return userRepository.findAll();
-    }
-
-    public User getUserById(Long id) {
-        return userRepository.findById(id).orElse(null);
-=======
-import com.munusync.backend.dtos.UserDto;
+import com.munusync.backend.dto.UserDTO;
 import com.munusync.backend.entity.User;
 import com.munusync.backend.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
-import org.springframework.web.bind.annotation.PathVariable;
 
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class UserService {
@@ -41,51 +20,53 @@ public class UserService {
         this.userRepository = userRepository;
     }
 
-    public List<UserDto> getAllUsers() {
+    // Return list of UserDTOs
+    public List<UserDTO> getAllUsers() {
         return userRepository.findAll().stream()
-                .map(user -> new UserDto(user.getId(), user.getName(), user.getEmail()))
-                .toList();
+                .map(user -> UserDTO.builder()
+                        .id(user.getId())
+                        .name(user.getName())
+                        .email(user.getEmail())
+                        .build())
+                .collect(Collectors.toList());
     }
 
-    public ResponseEntity<UserDto> getUserById(@PathVariable Long id) {
-        User user = userRepository.findById(id).orElse(null);
-        if (user == null) {
+    // Return ResponseEntity with UserDTO or 404
+    public ResponseEntity<UserDTO> getUserById(Long id) {
+        Optional<User> optionalUser = userRepository.findById(id);
+        if (optionalUser.isEmpty()) {
             return ResponseEntity.notFound().build();
         }
-        return ResponseEntity.ok(new UserDto(user.getId(), user.getName(), user.getEmail()));
->>>>>>> 85852505ceee28e61442811cd688f849a908978b
+        User user = optionalUser.get();
+        UserDTO dto = UserDTO.builder()
+                .id(user.getId())
+                .name(user.getName())
+                .email(user.getEmail())
+                .build();
+        return ResponseEntity.ok(dto);
     }
 
-    public User createUser(User user) {
+    // Create a User entity from DTO data
+    public User createUser(UserDTO userDTO) {
+        User user = new User();
+        user.setName(userDTO.getName());
+        user.setEmail(userDTO.getEmail());
         return userRepository.save(user);
     }
 
-    public User updateUser(Long id, User updatedUser) {
-<<<<<<< HEAD
+    // Update user by id from DTO
+    public User updateUser(Long id, UserDTO updatedUserDTO) {
         Optional<User> optionalUser = userRepository.findById(id);
-        if (optionalUser.isPresent()) {
-            User existing = optionalUser.get();
-            existing.setName(updatedUser.getName());
-            existing.setEmail(updatedUser.getEmail());
-            return userRepository.save(existing);
+        if (optionalUser.isEmpty()) {
+            return null;
         }
-        return null;
-=======
-        User existingUser = userRepository.findById(id).orElse(null);
-        if (existingUser == null)
-            throw new RuntimeException("User not found");
-
-        existingUser.setName(updatedUser.getName());
-        existingUser.setEmail(updatedUser.getEmail());
+        User existingUser = optionalUser.get();
+        existingUser.setName(updatedUserDTO.getName());
+        existingUser.setEmail(updatedUserDTO.getEmail());
         return userRepository.save(existingUser);
->>>>>>> 85852505ceee28e61442811cd688f849a908978b
     }
 
     public void deleteUser(Long id) {
         userRepository.deleteById(id);
     }
-<<<<<<< HEAD
-=======
-
->>>>>>> 85852505ceee28e61442811cd688f849a908978b
 }
